--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
       <a mat-button [routerLink]="'/dashboard'">Home</a>
       <a mat-button [matMenuTriggerFor]="menuTournament">Tournaments&#9660;</a>
       <a mat-button [matMenuTriggerFor]="menuTeam">Teams&#9660;</a>
-      <a mat-button [routerLink]="'/test'"> Statistics </a>
+      <a mat-button [routerLink]="'/statistics'"> Statistics </a>
       <a *ngIf="globals.isAdmin && globals.logged" mat-button [routerLink]="'/admin'"> Admin </a>
     </div>
 
