--- a/src/app/statistics/statistics.component.html
+++ b/src/app/statistics/statistics.component.html
@@ -5,93 +5,93 @@
                 <mat-card-header>
                     <div mat-card-avatar class="own"></div>
                     <mat-card-title>Statistics</mat-card-title>
-                    <mat-card-subtitle>blablabla</mat-card-subtitle>
+                    <mat-card-subtitle>Overall statistics (every column can can be sorted)</mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content>
                     <mat-tab-group>
-                        <mat-tab label="Players">   
+                        <mat-tab label="Players">
                             <table mat-table [dataSource]="playerDataSource" matSort>
-        
+
                                 <ng-container matColumnDef="name">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
                                     <td mat-cell *matCellDef="let element">{{element.name}}</td>
                                 </ng-container>
-        
+
                                 <ng-container matColumnDef="won_matches">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Won Matches</th>
                                     <td mat-cell *matCellDef="let element">{{element.won_matches}}</td>
                                 </ng-container>
-        
+
                                 <ng-container matColumnDef="lost_matches">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Lost Matches</th>
                                     <td mat-cell *matCellDef="let element">{{element.lost_matches}}</td>
                                 </ng-container>
-        
+
                                 <ng-container matColumnDef="won_sets">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Won Sets</th>
                                     <td mat-cell *matCellDef="let element">{{element.won_sets}}</td>
                                 </ng-container>
-        
+
                                 <ng-container matColumnDef="lost_sets">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Lost Sets</th>
                                     <td mat-cell *matCellDef="let element">{{element.lost_sets}}</td>
                                 </ng-container>
-        
+
                                 <ng-container matColumnDef="won_games">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Won Games</th>
                                     <td mat-cell *matCellDef="let element">{{element.won_games}}</td>
                                 </ng-container>
-        
+
                                 <ng-container matColumnDef="lost_games">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Lost Games</th>
                                     <td mat-cell *matCellDef="let element">{{element.lost_games}}</td>
                                 </ng-container>
-        
+
                                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                             </table>
                         </mat-tab>
                         <mat-tab label="Teams">
-                            <table mat-table [dataSource]="teamDataSource">
+                            <table mat-table [dataSource]="teamDataSource" matSort>
 
                                 <ng-container matColumnDef="name">
-                                    <th mat-header-cell *matHeaderCellDef >Name</th>
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
                                     <td mat-cell *matCellDef="let element">{{element.name}}</td>
                                 </ng-container>
-        
+
                                 <ng-container matColumnDef="won_matches">
-                                    <th mat-header-cell *matHeaderCellDef>Won Matches</th>
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Won Matches</th>
                                     <td mat-cell *matCellDef="let element">{{element.won_matches}}</td>
                                 </ng-container>
-        
+
                                 <ng-container matColumnDef="lost_matches">
-                                    <th mat-header-cell *matHeaderCellDef>Lost Matches</th>
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Lost Matches</th>
                                     <td mat-cell *matCellDef="let element">{{element.lost_matches}}</td>
                                 </ng-container>
-        
+
                                 <ng-container matColumnDef="won_sets">
-                                    <th mat-header-cell *matHeaderCellDef>Won Sets</th>
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Won Sets</th>
                                     <td mat-cell *matCellDef="let element">{{element.won_sets}}</td>
                                 </ng-container>
-        
+
                                 <ng-container matColumnDef="lost_sets">
-                                    <th mat-header-cell *matHeaderCellDef>Lost Sets</th>
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Lost Sets</th>
                                     <td mat-cell *matCellDef="let element">{{element.lost_sets}}</td>
                                 </ng-container>
-        
+
                                 <ng-container matColumnDef="won_games">
-                                    <th mat-header-cell *matHeaderCellDef>Won Games</th>
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Won Games</th>
                                     <td mat-cell *matCellDef="let element">{{element.won_games}}</td>
                                 </ng-container>
-        
+
                                 <ng-container matColumnDef="lost_games">
-                                    <th mat-header-cell *matHeaderCellDef>Lost Games</th>
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Lost Games</th>
                                     <td mat-cell *matCellDef="let element">{{element.lost_games}}</td>
                                 </ng-container>
-        
+
                                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                             </table>
+                            </table>
                         </mat-tab>
                     </mat-tab-group>
                 </mat-card-content>
