--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -1,3 +1,8 @@
-<div class="card mt-4">
-    <h4 class="card-header">You're logged in as {{usrnm}}!</h4>
-</div>
+<mat-card class="example-card">
+    <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>You're logged as {{usrnm}}</mat-card-title>
+        <mat-card-subtitle>We'd like to know more about you!<button [routerLink]="'/edit'" mat-raised-button>Edit Profile</button>
+        </mat-card-subtitle>
+    </mat-card-header>
+</mat-card>
