--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,38 +1,39 @@
 <div class="col-md-5 offset-md-1 mt-3">
     <div class="card">
         <h4 class="card-header">Register</h4>
+        <h5 class="card">   * Indicates required field</h5>
         <div class="card-body">
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                 <div class="form-group">
-                    <label for="username">Username</label>
+                    <label for="username">Username *</label>
                     <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
                     <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
                         <div *ngIf="f.username.errors.required">Username is required</div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="password">Password</label>
+                    <label for="password">Password *</label>
                     <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
                     <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                         <div *ngIf="f.password.errors.required">Password is required</div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="name">Name</label>
+                    <label for="name">Name *</label>
                     <input type="text" formControlName="name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
                     <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
                         <div *ngIf="f.name.errors.required">Name is required</div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="surname">Surname</label>
+                    <label for="surname">Surname *</label>
                     <input type="text" formControlName="surname" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.surname.errors }" />
                     <div *ngIf="submitted && f.surname.errors" class="invalid-feedback">
                         <div *ngIf="f.surname.errors.required">Surname is required</div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="nationality">Nationality</label>
+                    <label for="nationality">Nationality in Alpha-2 code *</label>
                     <input type="text" formControlName="nationality" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.nationality.errors }" />
                     <div *ngIf="submitted && f.nationality.errors" class="invalid-feedback">
                         <div *ngIf="f.nationality.errors.required">Nationality is required</div>
@@ -42,6 +43,10 @@
                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                     Register
                 </button>
+                <div>
+                    Already have account?
+                    <button [routerLink]="'/login'"  mat-button>Login </button>
+                </div>
                 <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
             </form>
         </div>
